# slint_vello

./: Cargo.toml
src/: main.rs
ui/: app.slint
