[package]
name = "experiment"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
vello = { git = "https://github.com/linebender/vello.git", branch = "main" }
anyhow = "1.0"
tokio = { version = "1.47", features = ["full"] }
slint = { git = "https://github.com/slint-ui/slint.git", branch = "master", features = [
	"renderer-skia",
	"unstable-wgpu-26",
] }
bytemuck = "1.23.2"
futures-intrusive = "0.5.0"
env_logger = "0.11.8"

[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint.git", branch = "master" }
